--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,11 @@
   }
 
   body {
-    background-image: radial-gradient(
+    /* background-image: radial-gradient(
       ellipse at top,
       rgb(20, 6, 4) 0%,
       #000000 100%
-    );
+    ); */
+    background-color: #000000;
   }
 }
