--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,10 @@
   :root {
     height: 100%;
   }
-  * {
-    @apply transition-colors duration-300;
+  .appContainer * {
+    transition:
+      color 0.3s ease-in-out,
+      background-color 0.3s ease-in-out,
+      border-color 0.3s ease-in-out;
   }
 }
