--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,23 @@
       border-color 0.3s ease-in-out;
   }
 
+  .appContainer *::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .appContainer *::-webkit-scrollbar-track {
+    background: #222;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  .appContainer *::-webkit-scrollbar-thumb {
+    background: #333;
+    border-radius: 9px;
+  }
+  .appContainer *::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
   .dark-shadow {
     box-shadow:
       inset 0 0 0.5px 1px hsla(0, 0%, 100%, 0.075),
