--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,32 @@
       0 3.5px 6px hsla(0, 0%, 0%, 0.09);
   }
 }
+
+/* Animations */
+.fadeIn {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.zoomIn {
+  animation: zoomIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
